# pyoway

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  SECURITY.md  deny.toml  docker-compose.yml  pyoway-implementation-plan.md  pyoway-spec.md  rust-toolchain.toml
.cargo/: config.toml
.github/: clippy.toml  copilot-instructions.md  dependabot.yml  labeler.yml
.github/scripts/: setup-branch-protection.sh
.github/workflows/: build-docs.yml  build-landing.yml  ci.yml  dependabot-auto-merge.yml  labeler.yml
.skills/: axum-backend.md  ci-cd-automation.md  dependency-management.md  leptos-frontend.md  mcp-setup.md  project-overview.md  rust-conventions.md
docs/: book.toml  test-docs.sh
docs/src/: SUMMARY.md  about.md  intro.md
docs/src/blog/: hello-world.md  post-template.md
docs/src/knowledge-base/rust/: leptos-notes.md  why-rust.md
docs/src/knowledge-base/tools/: cargo-tools-guide.md
docs/src/knowledge-base/web-dev/: modern-wasm.md
docs/theme/: custom.css
landing-frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
landing-frontend/src/: lib.rs  main.rs
landing-frontend/src/components/: docs_link.rs  features.rs  footer.rs  hero.rs  mod.rs  nav.rs
landing-frontend/src/styles/: tailwind.css
landing-server/: Cargo.toml
landing-server/src/: config.rs  error.rs  main.rs
