[package]
name = "landing-server"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Axum-based HTTP server serving the Pyoway landing page and WASM frontend"
repository = "https://github.com/pyoclaw/pyoway"
readme = "README.md"
keywords = ["axum", "wasm", "web", "landing-page"]
categories = ["web-programming::http-server"]

[lints]
workspace = true

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "compression-gzip",
    "compression-br",
    "set-header",
    "trace",
] }

# Serialization
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Error handling
thiserror = "2"

[dev-dependencies]
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = "0.1"
